## Process this file with automake to produce Makefile.in

AUTOMAKE_OPTIONS = foreign

otherdocdir = $(docdir)/assets/font
otherdoc_DATA = FiraMono-Bold.eot FiraMono-Regular.eot \
	   FiraSans-Bold.eot FiraSans-BoldItalic.woff \
	   FiraSans-Italic.eot FiraSans-Regular.eot \
	   FiraMono-Bold.woff FiraMono-Regular.woff \
	   FiraSans-BoldItalic.eot FiraSans-Bold.woff \
    	   FiraSans-Italic.woff FiraSans-Regular.woff

EXTRA_DIST = $(otherdoc_DATA)
